overflow correction

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ i {
 }
 
 .leftside-menus {
+    overflow: scroll;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
